fixed layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -168,3 +168,6 @@ img.case-study{
 .mb-10{
     margin-bottom:10px
 }
+.flex{
+    display: flex;
+}
